# upwork-freelancer-scraper

./: README.md  freelancers.csv  main.py  pyproject.toml
